ic/src/cli/snapshots/lunarwing__cli__tests__help_output.snap
---
source: src/cli/mod.rs
assertion_line: 452
expression: help
---
Secure personal AI assistant that protects your data and expands its capabilities

Usage: lunarwing [OPTIONS] [COMMAND]

Commands:
  run         Run the AI agent
  onboard     Run interactive setup wizard
  config      Manage app configs
  tool        Manage WASM tools
  registry    Browse/install extensions
  channels    Manage channels
  reflex      Manage reflex patterns
  routines    Manage routines
  mcp         Manage MCP servers
  memory      Manage workspace memory
  pairing     Manage DM pairing
  service     Manage OS service
  repl        Connect to running daemon via REPL
  skills      Manage skills
  hooks       Manage lifecycle hooks
  models      Manage LLM providers and models
  doctor      Run diagnostics
  logs        View and manage gateway logs
  status      Show system status
  completion  Generate completions
  import      Import from other AI systems
  login       Authenticate with a provider
  acp         Manage ACP agents
  help        Print this message or the help of the given subcommand(s)

Options:
      --cli-only           Run in interactive CLI mode only (disable other channels)
      --no-db              Skip database connection (for testing)
  -m, --message <MESSAGE>  Single message mode - send one message and exit
  -c, --config <CONFIG>    Configuration file path (optional, uses env vars by default)
      --no-onboard         Skip first-run onboarding check
      --auto-approve       Auto-approve tool execution (shell, file writes, HTTP, etc.)
      --supervised         Enable supervised mode — every tool action requires human approval regardless of the tool's normal tier
  -h, --help               Print help (see more with '--help')
  -V, --version            Print version
