ic/src/cli/snapshots/lunarwing__cli__tests__long_help_output.snap
---
source: src/cli/mod.rs
assertion_line: 468
expression: help
---
LunarWing is a secure AI assistant. Use 'lunarwing <subcommand> --help' for details.
Examples:
  lunarwing run  # Start the agent
  lunarwing config list  # List configs

Usage: lunarwing [OPTIONS] [COMMAND]

Commands:
  run         Run the AI agent
  onboard     Run interactive setup wizard
  config      Manage app configs
  tool        Manage WASM tools
  registry    Browse/install extensions
  channels    Manage channels
  reflex      Manage reflex patterns
  routines    Manage routines
  mcp         Manage MCP servers
  memory      Manage workspace memory
  pairing     Manage DM pairing
  service     Manage OS service
  repl        Connect to running daemon via REPL
  skills      Manage skills
  hooks       Manage lifecycle hooks
  models      Manage LLM providers and models
  doctor      Run diagnostics
  logs        View and manage gateway logs
  status      Show system status
  completion  Generate completions
  import      Import from other AI systems
  login       Authenticate with a provider
  acp         Manage ACP agents
  help        Print this message or the help of the given subcommand(s)

Options:
      --cli-only
          Run in interactive CLI mode only (disable other channels)

      --no-db
          Skip database connection (for testing)

  -m, --message <MESSAGE>
          Single message mode - send one message and exit

  -c, --config <CONFIG>
          Configuration file path (optional, uses env vars by default)

      --no-onboard
          Skip first-run onboarding check

      --auto-approve
          Auto-approve tool execution (shell, file writes, HTTP, etc.)
          
          Skips interactive approval prompts for standard tools. Other safeguards remain active: rate limits, hooks, authentication gates.

      --supervised
          Enable supervised mode — every tool action requires human approval regardless of the tool's normal tier.
          
          Unlike auto_approve (which bypasses approval), supervised mode forces ALL actions through the approval gate, including tools normally allowed without user intervention. Approvals auto-expire after the configured timeout (default: 300 seconds / 5 minutes).

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
