ic/src/cli/snapshots/lunarwing__cli__tests__long_help_output_without_import.snap
---
source: src/cli/mod.rs
expression: help
---
LunarWing is a secure AI assistant. Use 'lunarwing <subcommand> --help' for details.
Examples:
  lunarwing run  # Start the agent
  lunarwing config list  # List configs

Usage: lunarwing [OPTIONS] [COMMAND]

Commands:
  run         Run the AI agent
  onboard     Run interactive setup wizard
  config      Manage app configs
  tool        Manage WASM tools
  registry    Browse/install extensions
  channels    Manage channels
  routines    Manage routines
  mcp         Manage MCP servers
  memory      Manage workspace memory
  pairing     Manage DM pairing
  service     Manage OS service
  repl        Connect to running daemon via REPL
  skills      Manage skills
  hooks       Manage lifecycle hooks
  models      Manage LLM providers and models
  doctor      Run diagnostics
  logs        View and manage gateway logs
  status      Show system status
  completion  Generate completions
  login       Authenticate with a provider
  acp         Manage ACP agents
  help        Print this message or the help of the given subcommand(s)

Options:
      --cli-only
          Run in interactive CLI mode only (disable other channels)

      --no-db
          Skip database connection (for testing)

  -m, --message <MESSAGE>
          Single message mode - send one message and exit

  -c, --config <CONFIG>
          Configuration file path (optional, uses env vars by default)

      --no-onboard
          Skip first-run onboarding check

      --auto-approve
          Auto-approve tool execution (shell, file writes, HTTP, etc.)
          
          Skips interactive approval prompts for standard tools. Other safeguards remain active: rate limits, hooks, authentication gates.

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
